<resources>
    <string name="app_name">PKI Trust Network</string>
    <string name="ic_menu_secure">Encrypt/Decrypt</string>
    <string name="ic_menu_settings">Settings</string>
    <string name="subtitle_keys">Keys</string>
    <string name="subtitle_keys_new">Create Key</string>
    <string name="subtitle_keys_update">Update Key</string>
    <string name="subtitle_keys_import">Import Key</string>
    <string name="subtitle_keys_export">Export Key</string>
    <string name="subtitle_keys_detail">Key Details</string>
    <string name="subtitle_keys_collection">See Keys</string>
    <string name="subtitle_secure">Cryptographic operations</string>
    <string name="subtitle_settings">Settings</string>
    <string name="subtitle_cert">Certificates</string>
    <string name="subtitle_cert_collection">See Certificates</string>
    <string name="subtitle_cert_detail">Certificate Details</string>
    <string name="subtitle_cert_extension">Certificate Extensions</string>
    <string name="subtitle_cert_key_options">Certificate Signing Options</string>
    <string name="subtitle_cert_add">Create certificate</string>
    <string name="subtitle_cert_ca_elements">Select CA certificate and private key</string>
    <string name="subtitle_cert_sign_warning">Warning</string>
    <string name="subtitle_cert_export">Export Certificate</string>
    <string name="subtitle_cert_import">Import Certificate</string>
    <string name="subtitle_crl">CRLs</string>
    <string name="subtitle_trust_network">Trusted Network</string>
    <string name="subtitle_select_owner">Select Owner</string>
    <string name="subtitle_select_list_owner">Select List Owner</string>
    <string name="subtitle_select_holder">Select Holder</string>
    <string name="subtitle_select_key">Select Key</string>
    <string name="subtitle_select_ca">Select Signer CA</string>
    <string name="subtitle_select_certificate">Select Certificate</string>
    <string name="subtitle_open_file">Select File</string>
    <string name="subtitle_trust_cert_add">Add certificate to trust network</string>
    <string name="subtitle_trust_cert_update">Update trust level</string>
    <string name="subtitle_trust_cert_collection">See certificate in trusted list</string>
    <string name="subtitle_cert_verification_type">Select verification method</string>
    <string name="subtitle_verification_pgp">PGP+ Verification Results</string>
    <string name="subtitle_verification_x509">X.509 Verification Results</string>
    <string name="menu_add">Create</string>
    <string name="menu_next">Next</string>
    <string name="menu_sign">Sign</string>
    <string name="menu_import">Import</string>
    <string name="menu_details">Details</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_export">Export</string>
    <string name="menu_send">Send</string>
    <string name="menu_update">Update</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_verify">Verify</string>
    <string name="menu_continue">Continue</string>
    <string name="menu_option_error">Invalid option</string>
    <string name="menu_finish">Finish</string>
    <string name="action_details">See Details</string>
    <string name="detail_title_key">Key</string>
    <string name="detail_title_owner">Owner</string>
    <string name="detail_title_advanced">Advanced</string>
    <string name="detail_title_certificate">Certificate</string>
    <string name="detail_title_file">Select File</string>
    <string name="detail_title_issuer">Issuer</string>
    <string name="detail_title_holder">Holder</string>
    <string name="detail_title_public_key">Public Key</string>
    <string name="detail_title_private_key">Private Key</string>
    <string name="detail_title_extension_standar">X509 Standar</string>
    <string name="detail_title_extension_specific">Custom</string>
    <string name="detail_title_extension_position">Position</string>
    <string name="detail_title_secure_message">Message</string>
    <string name="detail_title_secure_file">File</string>
    <string name="detail_title_x509_type">X.509</string>
    <string name="detail_title_pgp_type">PGP+</string>
    <string name="detail_title_pgp_result">Total</string>
    <string name="detail_title_pgp_signers">Signers</string>
    <string name="detail_title_x509_path">Certification Path</string>
    <string name="detail_title_x509_result">Result</string>
    <string name="lblKeyCount">Key(s)</string>
    <string name="lblCertCount">Certificate(s)</string>
    <string name="lblTrustedCertCount">Added Certificate(s)</string>
    <string name="error_creating_db">Creating database error, unable to continue loading the application</string>
    <string name="error_db_load_key">Error loading key, see log for more details</string>
    <string name="error_db_load_certs">Error loading certificates, see log for more details</string>
    <string name="error_db_load_key_password">Wrong password</string>
    <string name="error_db_load_cert">Error loading certificate, see log for more details</string>
    <string name="error_db_load_owner">Error loading subject, see log for more details</string>
    <string name="error_db_delete_key">Error deleting key, see log for more details</string>
    <string name="error_db_update_key">Error updating key, see log for more details</string>
    <string name="error_db_export_key">Error exporting key, see log for more details</string>
    <string name="error_db_add_subject">Error adding the new owner, see log for more details</string>
    <string name="error_db_add_certificate">Error creating the new certificate, see log for more details</string>
    <string name="error_db_load_ca">Error loading CAs, see log for more details</string>
    <string name="error_db_load_trusted_certificate">Error loading trusted certificates lists, see log for more details</string>
    <string name="error_db_load_crl">Error loading CRLs, see log for more details</string>
    <string name="error_db_share_key">Error sharing key, see log for more details</string>
    <string name="error_db_load_secure_parameters_privatekey_sign">Error loading selected private signing key, see log for more details</string>
    <string name="error_db_load_secure_parameters_privatekey_decipher">Error loading selected private decipher key, see log for more details</string>
    <string name="error_db_load_secure_parameters_certificate_cipher">Error loading selected certificiate for cipher, see log for more details</string>
    <string name="error_db_load_secure_parameters_certificate_verify">Error loading selected certificiate for verify, see log for more details</string>
    <string name="error_key_decode">Error opening key details, see log for more details</string>
    <string name="error_key_creation">Error creating the key, see log for more details</string>
    <string name="error_key_import">Error importing the key, see log for more details</string>
    <string name="error_key_share">Error sharing the key, see log for more details</string>
    <string name="error_existing_owner">The owner already exist in this device</string>
    <string name="error_empty_password_key">Empty key password is not allowed</string>
    <string name="error_empty_password_pkcs">Empty key password is not allowed</string>
    <string name="error_empty_keySize">Empty key size is not allowed</string>
    <string name="error_notmatch_password_key">Key passwords does not match</string>
    <string name="error_notmatch_password_pkcs">PKCS#12 passwords does not match</string>
    <string name="error_empty_owner">You must select one owner</string>
    <string name="error_empty_list_owner">You must select one trusted list owner</string>
    <string name="error_empty_crl">You must select one CRL</string>
    <string name="error_empty_holder">You must select one holder</string>
    <string name="error_empty_key">You must select one key</string>
    <string name="error_empty_cert">You must select one certificate</string>
    <string name="error_empty_ca">You must select one CA</string>
    <string name="error_keySizeToShort">Key Size to short must be at least 1024</string>
    <string name="error_cert_decode">Error opening certificate details, see log for more details</string>
    <string name="error_cert_date_format">Invalid date value</string>
    <string name="error_cert_not_after">\"Ending\" date must be after the current date</string>
    <string name="error_cert_not_after_before">\"Ending\" date must be after \"Beginning\" date</string>
    <string name="error_cert_empty_key_usage">Please select at least one Key Usage</string>
    <string name="error_cert_holder_fields_count">Please add at least 4 holder fields</string>
    <string name="error_cert_holder_fields_not_empty">Please add at least 4 not empty holder fields</string>
    <string name="error_cert_search_issuer">Issuer certificate not found</string>
    <string name="error_cert_sign_parameters">Signing parameters errors</string>
    <string name="error_cert_parameters_match">The selected private key and certificate does not match, means that the selected private key does not correspond to the selected certificate</string>
    <string name="error_cert_key_decode">The public key saved in the certificate it\'s not recognized</string>
    <string name="error_cert_export">Error exporting the certificate, see log for more details</string>
    <string name="error_cert_import">Error importing the certificate, see log for more details</string>
    <string name="error_cert_load_possible_ca">Error loading possible CA Certificate List, see log for more details</string>
    <string name="error_cert_select_ca">Please select the signing CA certificate</string>
    <string name="error_cert_load_signers">Error loading certificate key signers</string>
    <string name="error_cert_share">Error sharing certificate, see log for more details</string>
    <string name="error_trust_cert_add_db">Error adding trusted certificate to list, see log for more details</string>
    <string name="error_trust_cert_level">Error in trust level</string>
    <string name="error_trust_cert_duplicate">Error, this certificate is already in the selected list</string>
    <string name="error_trust_cert_update_db">Error updating the trust level, see log for more details</string>
    <string name="error_verify_x509">Error while verifying the certificate, see log for more details</string>
    <string name="lblKeyId">ID </string>
    <string name="lblOwnerAlias">Owner Alias</string>
    <string name="lblKeyComment">Comment</string>
    <string name="lblKeyID">Unique ID</string>
    <string name="lblAddNewOwner">New</string>
    <string name="lblKeyType">Type</string>
    <string name="lblKeyUsageCRLSign">CRL sign</string>
    <string name="lblKeyUsageDataCipher">Data cipher</string>
    <string name="lblKeyUsageKeyCipher">Key cipher</string>
    <string name="lblKeyUsage">Key Usage</string>
    <string name="lblKeyCreationDate">Creation date</string>
    <string name="lblRecommended">* Recommended value</string>
    <string name="lblCertificateNotBefore">Beginning</string>
    <string name="lblCertificateNotAfter">Ending</string>
    <string name="lblCertificateSignaturenatureAlgorithm">Signature Algorithm</string>
    <string name="lblCertificateValidity">Validity Period</string>
    <string name="lblSeeDetails">Details</string>
    <string name="lblAdd">Add</string>
    <string name="lblCertificateType">Type</string>
    <string name="lblKeyUsageDigitalSignature">Digital Signature</string>
    <string name="lblKeyUsageKeyCertSign">Key and Certificate Sign</string>
    <string name="chkKeyUsageKeyAgreement">Key Agreement</string>
    <string name="chkKeyUsageNonRepudiation">Non Repudiation</string>
    <string name="chkKeyUsageEncipherOnly">Cipher only (Key Agreement)</string>
    <string name="chkKeyUsageDecipherOnly">Decipher only (Key Agreement)</string>
</resources>