<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<!-- icon -->
	<item android:id="@+id/menu_key_delete" 
	    android:showAsAction="ifRoom"
		android:title="@string/menu_delete" 
		android:icon="@drawable/ic_action_key_delete" />
	
	<item android:id="@+id/menu_key_update" 
	    android:showAsAction="ifRoom"
		android:title="@string/menu_update" 
		android:icon="@drawable/ic_action_key_update" />
	
	<item android:id="@+id/menu_key_export" 
	    android:showAsAction="ifRoom"
		android:title="@string/menu_export" 
		android:icon="@drawable/ic_action_key_export" />
	
	<item android:id="@+id/menu_key_share" 
	    android:showAsAction="never"
		android:title="@string/menu_send" 
		android:icon="@drawable/ic_action_key_send"
		 android:actionProviderClass="com.actionbarsherlock.widget.ShareActionProvider" />
	
	<!-- icon -->
	<!-- <item android:id="@+id/menu_settings" 
	    android:showAsAction="ifRoom"
		android:title="@string/ic_menu_settings" 
		android:icon="@drawable/ic_menu_settings" /> -->

</menu>
